# ppm2rgb

./: .gitignore  LICENSE  Makefile  Nemesis  changelog.md  known-issues.md  ppm2rgb.cabal  readme.md
src/: Main.lhs  Parse.hs
