Name:                 ppm2rgb
Version:              0.0
Build-type:           Simple
Synopsis:             
Stability:      Experimental
Description:          A module to get the rgb values out of a ppm file

License:              BSD3
License-file:         LICENSE
Author:               Daniel Kahlenberg
Maintainer:           
Cabal-version:        >= 1.6
Tested-With:        GHC==6.12.3
category:             Graphics
homepage:             
data-files:           data/input_p3.ppm, data/input_p6.ppm
extra-source-files: changelog.md, known-issues.md, Nemesis, readme.md

Executable ppm2rgb
  Main-Is:        Main.lhs
  ghc-options:        -Wall -threaded -fno-ignore-asserts -fforce-recomp -O2 -funbox-strict-fields -fvia-C -optc-O2
  Hs-Source-Dirs: src
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

-- install cabal-install first
  build-depends: base     >= 2        && < 5,
                 directory    >= 1.0.1.1,
                 random   >= 1.0.0.2,
                 Cabal    >= 1.8      && < 1.10,
--                 colour     >= 2.3.1    && < 2.4,
--                 random     >= 1.0.0.2    && < 1.0.0.3,
                 MonadRandom    >= 0.1.5    && < 0.1.6,
                 -- binary etc. come when you install delimited-text after cabal-install
                 delimited-text >= 0.1.7	&& < 0.2,
                 -- the one coming with ghc-6.12.3 suffices
                 bytestring     >= 0.9.1.7    &&  < 0.9.1.8,
                 -- the one coming with ghc-6.12.3 suffices
                 mtl    >= 1.1.0.2    && < 2.0.1.0,
                 split    >= 0.1.2.2    && < 0.1.2.3,
                 MissingH   >= 1.1.0.3,
                 regex-posix    >= 0.94.4,
                 AC-Colour    >= 1.1.3,
                 cmdargs    >= 0.6.3
